--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -1,5 +1,32 @@
 <?php
 /**
+ * Global Configuration Override
+ *
+ * You can use this file for overriding configuration values from modules, etc.
+ * You would place values in here that are agnostic to the environment and not
+ * sensitive to security.
+ *
+ * @NOTE: In practice, this file will typically be INCLUDED in your source
+ * control, so do not include passwords or other sensitive information in this
+ * file.
+ */
+
+return array(
+    'db' => array(
+        'driver' => 'Pdo',
+        'dsn' => 'mysql:dbname=shopdogo;host:localhost',
+        'driver_options' => array(
+            PDO::MYSQL_ATTR_INIT_COMMAND => 'SET NAMES \'UTF8\'',
+        ),
+    ),
+
+    'service_manager' => array(
+        'factories' => array(
+            'Zend\Db\Adapter\Adapter' => 'Zend\Db\Adapter\AdapterServiceFactory',
+        )
+    ),
+);
+/**
  * Local Configuration Override
  *
  * This configuration override file is for overriding environment-specific and
@@ -12,4 +39,8 @@
  */
 
 return array(
+    'db' => array(
+        'username' => 'root',
+        'password' => 'root',
+    ),
 );
