--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
         "php": ">=5.3.3",
         "zendframework/zendframework": "~2.3",
         "zendframework/zend-developer-tools": "dev-master",
-        "bjyoungblood/bjy-profiler": "dev-master"
+        "bjyoungblood/bjy-profiler": "dev-master",
+        "san/san-session-toolbar": "0.1.*@dev"
+    },
+    "autoload": {
+     "psr-0": { "User": "module/User/src/" },
     }
 }
